# PersonPractice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
folly/: CMakeLists.txt  folly_fbstring.cpp  folly_fbstring.h  folly_util.cpp
hdk/: CMakeLists.txt  hdk_array.cpp  hdk_array.h  hdk_usage.cpp  hdk_vmmath.cpp  hdk_vmmath.h  hdkjson.cpp  hdkjson.h
houdiniengine/: CMakeLists.txt  Source.cpp
houdiniengine/FullSourceSamples/source/: connecting_assets.cpp  curve_marshall.cpp  curve_output.cpp  geometry_marshall.cpp  geometry_point_cloud.cpp  groups.cpp  materials.cpp  node_networks.cpp  nurbs_curve.cpp  objects_geos_parts.cpp  packed_primitives.cpp  parameters.cpp
opengl/: Application.cpp  Application.h  CMakeLists.txt  Event.h  Example.cpp  Log.cpp  Log.h  Pch.h  Window.cpp  Window.h  imgui_impl_opengl3.cpp  main.cpp  shader.cpp  shader.h
opengl/glad/include/glad/: glad.h
opengl/shader/: fragment.fs  vertex.vs
python/: main.py
src/: fileutility.cpp  platform_macro.h
temporary/: EcotoEntries.json
